Integration test working